--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -1,3 +1,16 @@
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  border-radius: 25px;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  padding-left: 20px;
+  padding-right: 20px;
+  color: white;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3);
+}
+
 body {
   background: white;
   padding: 0;
@@ -10,7 +23,7 @@ header {
   align-items: center;
 }
 header img {
-  padding: 19px 0px 19px 0px;
+  padding: 19px 0px 12px 0px;
   width: 46%;
 }
 
@@ -20,10 +33,12 @@ header img {
   align-items: center;
   background: #EAEAEA;
   padding: 19px 0px 19px 0px;
+  box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
 }
 
 .searchBar {
   display: flex;
+  width: 45%;
   background-color: #EAEAEA;
   color: black;
 }
@@ -36,6 +51,27 @@ header img {
   margin-left: 12px;
   font-size: 14px;
   outline: none;
+}
+
+#reservation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #f7f7f7;
+  padding: 15px 30px 45px 30px;
+}
+#reservation h2 {
+  text-align: center;
+}
+#reservation p {
+  text-align: center;
+  margin-top: -10px;
+  margin-bottom: 28px;
+}
+
+#fonctionnement {
+  background: white;
 }
 
 /*# sourceMappingURL=ohmyfood.css.map */
