--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -1,4 +1,12 @@
-.btn {
+body {
+  background: white;
+  padding: 0;
+  margin: 0;
+}
+body h2 {
+  font-family: "Roboto", sans-serif;
+}
+body .btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,11 +18,31 @@
   color: white;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3);
 }
-
-body {
-  background: white;
-  padding: 0;
-  margin: 0;
+body .step {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+  max-width: 324px;
+  height: 74px;
+  justify-content: flex-start;
+  align-items: center;
+  background: #f6f6f6;
+  border-radius: 14px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+body .ball {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  background: #9356DC;
+  color: white;
+  width: 18px;
+  height: 18px;
+  border-radius: 25px;
+  margin-left: -8px;
+  font-size: 11px;
 }
 
 header {
@@ -40,7 +68,7 @@ header img {
   display: flex;
   width: 45%;
   background-color: #EAEAEA;
-  color: black;
+  color: #353535;
 }
 .searchBar input {
   border: none;
@@ -51,6 +79,7 @@ header img {
   margin-left: 12px;
   font-size: 14px;
   outline: none;
+  color: #353535;
 }
 
 #reservation {
@@ -71,7 +100,13 @@ header img {
 }
 
 #fonctionnement {
-  background: white;
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 20px 40px 20px;
+}
+#fonctionnement i {
+  color: #7e7e7e;
 }
 
 /*# sourceMappingURL=ohmyfood.css.map */
