--- a/sass/ohmyfood.scss
+++ b/sass/ohmyfood.scss
@@ -2,6 +2,16 @@ $colorPrimary: #9356DC;
 $colorSecondary: #FF79DA;
 $colorTertiary: #99E2D0;
 $shadow: 0px 4px 10px 0px rgba(0,0,0,0.3);
+$colorgrey: #7e7e7e;
+
+body{
+    background: white;
+    padding: 0;
+    margin: 0;
+    h2{
+        font-family: 'Roboto', sans-serif;
+    }
+
 .btn{
     display: flex;
     justify-content: center;
@@ -13,13 +23,35 @@ $shadow: 0px 4px 10px 0px rgba(0,0,0,0.3);
     padding-right: 20px;
     color: white;
     box-shadow: $shadow;
+}
+.step{
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    max-width: 324px;
+    height: 74px;
+    justify-content: flex-start;
+    align-items: center;
+    background: #f6f6f6;
+    border-radius: 14px;
+    box-shadow: 0px 5px 10px 0px rgb(0 0 0 / 10%);
+    margin-bottom: 20px;
+}
+.ball{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    background: $colorPrimary;
+    color: white;
+    width: 18px;
+    height: 18px;
+    border-radius: 25px;
+    margin-left: -8px;
+    font-size: 11px;
 
 }
 
-body{
-    background: white;
-    padding: 0;
-    margin: 0;
 }
 header{
     display: flex;
@@ -37,12 +69,13 @@ header{
     background: #EAEAEA;
     padding: 19px 0px 19px 0px;
     box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.3);
+    
 }
 .searchBar{
     display: flex;
     width: 45%;
     background-color: #EAEAEA;
-    color: black;
+    color: #353535;
     input{
         border: none;
         background-color: #EAEAEA;
@@ -52,6 +85,7 @@ header{
         margin-left: 12px;
         font-size: 14px;
         outline: none;
+        color: #353535;
     }
 }
 #reservation{
@@ -74,5 +108,12 @@ header{
 
 }
 #fonctionnement{
-    background: white;
+    background: #ffffff;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 20px 40px 20px;
+    i{
+        color: #7e7e7e;
+    }
+
 }
