--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -18,6 +18,9 @@ body .btn {
   color: white;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3);
 }
+body .titre {
+  width: 100%;
+}
 body .step {
   display: flex;
   gap: 20px;
@@ -27,7 +30,7 @@ body .step {
   justify-content: flex-start;
   align-items: center;
   background: #f6f6f6;
-  border-radius: 14px;
+  border-radius: 20px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
 }
@@ -97,16 +100,71 @@ header img {
   text-align: center;
   margin-top: -10px;
   margin-bottom: 28px;
+  color: #353535;
+  font-weight: 100;
+  font-size: 16px;
 }
 
 #fonctionnement {
   background: #ffffff;
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 20px 20px 40px 20px;
 }
 #fonctionnement i {
   color: #7e7e7e;
+}
+
+#restaurants {
+  padding: 5%;
+  align-items: center;
+  background: #f6f6f6;
+}
+
+.carte {
+  display: flex;
+  flex-direction: column;
+  height: 251px;
+  width: 100%;
+  margin-top: 20px;
+  border-radius: 15px 15px 15px 15px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+}
+.carte img {
+  height: 174px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 15px 15px 0 0;
+}
+.carte .content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 77px;
+  width: 100%;
+  background: white;
+  padding: 0px;
+  border-radius: 0 0 15px 15px;
+}
+.carte .content i {
+  margin-right: 23px;
+  font-size: 21px;
+  font-weight: lighter;
+}
+
+article {
+  margin-left: 14px;
+}
+article h3 {
+  margin: 0;
+}
+article p {
+  margin: 0;
+}
+
+footer {
+  background: #353535;
 }
 
 /*# sourceMappingURL=ohmyfood.css.map */
