--- a/sass/ohmyfood.scss
+++ b/sass/ohmyfood.scss
@@ -24,6 +24,9 @@ body{
     color: white;
     box-shadow: $shadow;
 }
+.titre{
+    width: 100%;
+}
 .step{
     display: flex;
     gap: 20px;
@@ -33,7 +36,7 @@ body{
     justify-content: flex-start;
     align-items: center;
     background: #f6f6f6;
-    border-radius: 14px;
+    border-radius: 20px;
     box-shadow: 0px 5px 10px 0px rgb(0 0 0 / 10%);
     margin-bottom: 20px;
 }
@@ -102,6 +105,9 @@ header{
         text-align: center;
         margin-top: -10px;
         margin-bottom: 28px;
+        color: #353535;
+        font-weight: 100;
+        font-size: 16px;
     }
     
 
@@ -111,9 +117,59 @@ header{
     background: #ffffff;
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 20px 20px 40px 20px;
     i{
         color: #7e7e7e;
     }
 
+}
+#restaurants{
+    padding: 5%;
+    align-items: center;
+    background:#f6f6f6
+}
+.carte{
+    display: flex;
+    flex-direction: column;
+    height: 251px;
+    width: 100%;
+    margin-top: 20px;
+    border-radius: 15px 15px 15px 15px;
+    box-shadow: 0px 5px 10px 0px rgb(0 0 0 / 10%);
+    img{
+        height: 174px;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 15px 15px 0 0;
+    }
+    .content{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 77px;
+        width: 100%;
+        background: white;
+        padding: 0px;
+        border-radius: 0 0 15px 15px;
+        i{
+            margin-right: 23px;
+            font-size: 21px;
+            font-weight: lighter;
+        }
+        
+    }
+}
+article{
+    margin-left: 14px;
+    h3{
+        margin: 0;
+        
+    }
+    p{
+        margin: 0;
+    }
+}
+footer{
+    background: #353535;
 }
