--- a/sass/ohmyfood.scss
+++ b/sass/ohmyfood.scss
@@ -8,7 +8,7 @@ body{
     background: white;
     padding: 0;
     margin: 0;
-    h2{
+    h2, h3, p {
         font-family: 'Roboto', sans-serif;
     }
 
@@ -39,6 +39,7 @@ body{
     border-radius: 20px;
     box-shadow: 0px 5px 10px 0px rgb(0 0 0 / 10%);
     margin-bottom: 20px;
+    font-weight: 600;
 }
 .ball{
     display: flex;
@@ -47,8 +48,8 @@ body{
     height: 50px;
     background: $colorPrimary;
     color: white;
-    width: 18px;
-    height: 18px;
+    width: 22px;
+    height: 22px;
     border-radius: 25px;
     margin-left: -8px;
     font-size: 11px;
@@ -89,6 +90,7 @@ header{
         font-size: 14px;
         outline: none;
         color: #353535;
+        font-weight: 600;
     }
 }
 #reservation{
@@ -106,7 +108,7 @@ header{
         margin-top: -10px;
         margin-bottom: 28px;
         color: #353535;
-        font-weight: 100;
+        font-weight: 300;
         font-size: 16px;
     }
     
@@ -119,8 +121,12 @@ header{
     flex-direction: column;
     align-items: center;
     padding: 20px 20px 40px 20px;
+    h2{
+        margin-bottom: 31px;
+    }
     i{
         color: #7e7e7e;
+        font-size: large;
     }
 
 }
@@ -128,6 +134,8 @@ header{
     padding: 5%;
     align-items: center;
     background:#f6f6f6
+    
+    
 }
 .carte{
     display: flex;
@@ -137,6 +145,9 @@ header{
     margin-top: 20px;
     border-radius: 15px 15px 15px 15px;
     box-shadow: 0px 5px 10px 0px rgb(0 0 0 / 10%);
+    &:last-child{
+        margin-bottom: 40px;
+    }
     img{
         height: 174px;
         width: 100%;
@@ -168,8 +179,36 @@ article{
     }
     p{
         margin: 0;
+        font-weight: 300;
     }
 }
 footer{
     background: #353535;
+    color: white;
+    padding: 20px;
+    h3{
+        margin-top: 0;
+        font-family: 'Shrikhand', cursive;
+        font-weight: 100;
+        font-size: medium;
+    }
+    ul{
+        list-style-type: none;
+        padding-left: 0;
+        margin: 0;
+        :nth-child(1) i{
+            font-size: small;
+        }
+        :nth-child(2) i{
+            font-size: x-small;
+        }
+        li{
+            margin-bottom: 8px;
+            font-size: 16px;
+            i{
+                margin-right: 10px;
+            }
+        }
+    }
+
 }
