--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -2,8 +2,6 @@ body {
   background: white;
   padding: 0;
   margin: 0;
-}
-body h2, body h3, body p {
   font-family: "Roboto", sans-serif;
 }
 body .btn {
@@ -33,7 +31,7 @@ body .step {
   border-radius: 20px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
-  font-weight: 600;
+  font-weight: 500;
 }
 body .ball {
   display: flex;
@@ -46,7 +44,8 @@ body .ball {
   height: 22px;
   border-radius: 25px;
   margin-left: -8px;
-  font-size: 11px;
+  font-size: 13px;
+  font-weight: 400;
 }
 
 header {
@@ -81,7 +80,7 @@ header img {
   justify-content: center;
   align-items: center;
   margin-left: 12px;
-  font-size: 14px;
+  font-size: 16px;
   outline: none;
   color: #353535;
   font-weight: 600;
@@ -97,6 +96,7 @@ header img {
 }
 #reservation h2 {
   text-align: center;
+  width: 240px;
 }
 #reservation p {
   text-align: center;
@@ -104,7 +104,7 @@ header img {
   margin-bottom: 28px;
   color: #353535;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 #fonctionnement {
@@ -160,6 +160,7 @@ header img {
   margin-right: 23px;
   font-size: 21px;
   font-weight: lighter;
+  color: #101010;
 }
 
 article {
@@ -167,40 +168,46 @@ article {
 }
 article h3 {
   margin: 0;
+  margin-bottom: 3px;
+  font-size: large;
 }
 article p {
   margin: 0;
   font-weight: 300;
+  color: #101010;
 }
 
 footer {
   background: #353535;
   color: white;
-  padding: 20px;
+  padding: 26px;
 }
 footer h3 {
   margin-top: 0;
   font-family: "Shrikhand", cursive;
   font-weight: 100;
-  font-size: medium;
+  font-size: large;
 }
 footer ul {
   list-style-type: none;
   padding-left: 0;
   margin: 0;
-}
-footer ul :nth-child(1) i {
-  font-size: small;
-}
-footer ul :nth-child(2) i {
-  font-size: x-small;
+  font-weight: 400;
 }
 footer ul li {
   margin-bottom: 8px;
   font-size: 16px;
 }
-footer ul li i {
-  margin-right: 10px;
+footer ul :nth-child(1) i {
+  font-size: small;
+  margin-right: 12px;
+}
+footer ul :nth-child(2) i {
+  font-size: small;
+  margin-right: 7px;
+}
+footer ul :nth-child(3), footer ul :nth-child(4) {
+  font-weight: 300;
 }
 
 /*# sourceMappingURL=ohmyfood.css.map */
