--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -86,6 +86,16 @@ header img {
   font-weight: 600;
 }
 
+.banniere {
+  height: 260px;
+  width: 100%;
+}
+.banniere img {
+  width: 100%;
+  height: 260px;
+  object-fit: cover;
+}
+
 #reservation {
   display: flex;
   flex-direction: column;
@@ -160,7 +170,6 @@ header img {
   margin-right: 23px;
   font-size: 21px;
   font-weight: lighter;
-  color: #101010;
 }
 
 article {
@@ -174,7 +183,6 @@ article h3 {
 article p {
   margin: 0;
   font-weight: 300;
-  color: #101010;
 }
 
 footer {
@@ -204,7 +212,7 @@ footer ul :nth-child(1) i {
 }
 footer ul :nth-child(2) i {
   font-size: small;
-  margin-right: 7px;
+  margin-right: 8px;
 }
 footer ul :nth-child(3), footer ul :nth-child(4) {
   font-weight: 300;
