--- a/sass/ohmyfood.scss
+++ b/sass/ohmyfood.scss
@@ -92,6 +92,15 @@ header{
         font-weight: 600;
     }
 }
+.banniere{
+    height: 260px;
+    width: 100%;
+    img{
+        width: 100%;
+        height: 260px;
+        object-fit: cover;
+    }
+}
 #reservation{
     display: flex;
     flex-direction: column;
