--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -1,3 +1,7 @@
+.redBorder {
+  border: 1px solid red;
+}
+
 body {
   background: white;
   padding: 0;
@@ -15,6 +19,12 @@ body .btn {
   padding-right: 20px;
   color: white;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3);
+}
+body .btn--commander {
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-top: 10px;
+  margin-bottom: 83px;
 }
 body .titre {
   width: 100%;
@@ -89,11 +99,107 @@ header img {
 .banniere {
   height: 260px;
   width: 100%;
+  max-width: 375px;
+  background-size: contain;
 }
-.banniere img {
+.banniere--alafrancaise {
+  background-image: url("./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+}
+.banniere--lanoteenchantee {
+  background-image: url("./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+}
+.banniere--ledelicedessens {
+  background-image: url("./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+}
+.banniere--lapalettedugout {
+  background-image: url("./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+}
+
+#menu {
+  display: flex;
+  flex-direction: column;
+  padding-left: 14px;
+  padding-right: 12px;
+  background: #f6f6f6;
+  align-items: center;
+  border-radius: 40px 40px 0 0;
+  margin-top: -60px;
+}
+#menu h2 {
+  font-family: "Shrikhand", "cursive";
+}
+
+.titreRestaurant {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
-  height: 260px;
-  object-fit: cover;
+  margin: 12px 0;
+}
+.titreRestaurant h2 {
+  margin-left: 10px;
+  font-weight: 500;
+  font-size: 28px;
+}
+.titreRestaurant i {
+  font-size: 25px;
+  font-weight: 100;
+  margin-right: 20px;
+}
+
+.service {
+  font-size: large;
+  font-weight: 100;
+  color: #1e1e1e;
+}
+
+.setChoix {
+  display: flex;
+}
+
+.choix {
+  display: flex;
+  width: 327px;
+  padding: 11px;
+  background: #ffffff;
+  justify-content: space-between;
+  border-radius: 15px;
+  margin-bottom: 14px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+}
+.choix:last-child {
+  margin-bottom: 40px;
+}
+.choix h3 {
+  font-weight: 500;
+}
+
+.plats p {
+  font-size: smaller;
+}
+
+.prix {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.prix p {
+  font-weight: 500;
+  font-size: smaller;
+}
+.prix--checked {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 65px;
+  width: 65px;
+  overflow: hidden;
+  transform: translateX(0);
+  background: #99E2D0;
+  color: white;
+}
+.prix--checked:hover {
+  overflow: visible;
+  transform: translateX(-65px);
 }
 
 #reservation {
