--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -1,3 +1,13 @@
+@keyframes slide {
+  0% {
+    opacity: 0;
+    transform: translateX(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
 .redBorder {
   border: 1px solid red;
 }
@@ -153,25 +163,61 @@ header img {
   color: #1e1e1e;
 }
 
-.setChoix {
+.checked {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 65px;
+  width: 65px;
+  background: #99E2D0;
+  color: white;
+  transform: translateX(0px);
+  transition: transform 400ms;
+  margin-right: -120px;
 }
 
 .choix {
   display: flex;
   width: 327px;
-  padding: 11px;
   background: #ffffff;
   justify-content: space-between;
   border-radius: 15px;
   margin-bottom: 14px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: all 400ms;
+}
+.choix:hover .checked {
+  display: flex;
+  transform: translateX(-120px);
+}
+.choix:hover .prix {
+  transform: translateX(-65px);
+}
+.choix:hover .plats {
+  width: 209px;
 }
 .choix:last-child {
   margin-bottom: 40px;
 }
 .choix h3 {
   font-weight: 500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.choix p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.plats {
+  margin: 11px;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  text-overflow: ellipsis;
+  transition: 400ms;
 }
 
 .plats p {
@@ -181,25 +227,13 @@ header img {
 .prix {
   display: flex;
   flex-direction: column-reverse;
+  margin: 11px;
+  transform: translateX(0px);
+  transition: transform 400ms;
 }
 .prix p {
   font-weight: 500;
   font-size: smaller;
-}
-.prix--checked {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 65px;
-  width: 65px;
-  overflow: hidden;
-  transform: translateX(0);
-  background: #99E2D0;
-  color: white;
-}
-.prix--checked:hover {
-  overflow: visible;
-  transform: translateX(-65px);
 }
 
 #reservation {
