--- a/sass/ohmyfood.scss
+++ b/sass/ohmyfood.scss
@@ -3,6 +3,17 @@ $colorSecondary: #FF79DA;
 $colorTertiary: #99E2D0;
 $shadow: 0px 4px 10px 0px rgba(0,0,0,0.3);
 $colorgrey: #7e7e7e;
+@keyframes slide {
+    0% {
+      opacity: 0;
+      transform: translateX(40px);
+    }
+    
+    100% {
+      opacity: 1;
+      transform: translateX(0px);
+    }
+  }
 .redBorder{
     border: 1px solid red;
 }
@@ -157,24 +168,65 @@ header{
     color: #1e1e1e;
     
     }
-.setChoix{
+
+.checked{
+    
     display: flex;
-}
+    justify-content: center;
+    align-items: center;
+    height: 65px;
+    width: 65px;   
+    background: $colorTertiary;
+    color: white;
+    transform:translateX(0px);
+    transition: transform 400ms;
+    margin-right: -120px;
+}   
+
 .choix{
     display: flex;
     width: 327px;
-    padding: 11px;
     background: #ffffff;
     justify-content: space-between;
     border-radius: 15px;
     margin-bottom: 14px;
     box-shadow: 0px 5px 10px 0px rgb(0 0 0 / 10%);
+    overflow: hidden;
+    transition: all 400ms;
+    
+    &:hover{
+        .checked{   
+            display: flex;
+            transform: translateX(-120px);   
+        }
+        .prix{
+            transform: translateX(-65px);
+        }
+        .plats{
+            width: 209px;
+        }
+    }
     &:last-child{
         margin-bottom: 40px;}
     h3{
         font-weight: 500;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    p{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
    
+}
+.plats{
+    margin: 11px;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    text-overflow: ellipsis;
+    transition:  400ms;
 }
 .plats p{
     font-size: smaller;
@@ -182,26 +234,15 @@ header{
 .prix{
     display: flex;
     flex-direction: column-reverse;
+    margin: 11px;
+    transform:translateX(0px);
+    transition: transform 400ms;
     p{
         font-weight: 500;
         font-size: smaller;
-    }
-    &--checked{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 65px;
-        width: 65px;
-        overflow: hidden;
-        transform: translateX(0);
-        background: $colorTertiary;
-        color: white;
-        &:hover{
-            overflow: visible;
-            transform: translateX(-65px);
-        }
-    }
+    }    
 }
+
 #reservation{
     display: flex;
     flex-direction: column;
