--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -169,18 +169,17 @@ header img {
   align-items: center;
   height: 65px;
   width: 65px;
+  min-width: 65px;
   background: #99E2D0;
   color: white;
   transform: translateX(0px);
   transition: transform 400ms;
-  margin-right: -120px;
 }
 
 .choix {
   display: flex;
-  width: 327px;
+  width: 318px;
   background: #ffffff;
-  justify-content: space-between;
   border-radius: 15px;
   margin-bottom: 14px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
@@ -189,12 +188,18 @@ header img {
 }
 .choix:hover .checked {
   display: flex;
-  transform: translateX(-120px);
+  transform: translateX(-65px);
 }
 .choix:hover .prix {
   transform: translateX(-65px);
 }
 .choix:hover .plats {
+  width: 249px;
+}
+.choix:hover .plats h3 {
+  width: 209px;
+}
+.choix:hover .plats p {
   width: 209px;
 }
 .choix:last-child {
@@ -212,12 +217,19 @@ header img {
   text-overflow: ellipsis;
 }
 
+.content {
+  display: flex;
+  justify-content: space-between;
+  width: 327px;
+}
+
 .plats {
   margin: 11px;
   overflow: hidden;
   overflow-wrap: break-word;
   text-overflow: ellipsis;
   transition: 400ms;
+  width: 249px;
 }
 
 .plats p {
