--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -1,13 +1,3 @@
-@keyframes slide {
-  0% {
-    opacity: 0;
-    transform: translateX(40px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0px);
-  }
-}
 .redBorder {
   border: 1px solid red;
 }
@@ -162,7 +152,33 @@ header img {
   font-weight: 100;
   color: #1e1e1e;
 }
+.service .service_nom {
+  position: relative;
+  margin-bottom: 26px;
+  font-size: 17px;
+  font-weight: 300;
+}
+.service .service_nom::after {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 3px;
+  background-color: #99E2D0;
+  bottom: -12px;
+  left: 3px;
+  font-size: 20px;
+  font-weight: 100;
+}
 
+/*
+content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    width: 40px;
+    height: 4px;
+    background-color: #99E2D0;
+*/
 .checked {
   display: flex;
   justify-content: center;
@@ -231,7 +247,6 @@ header img {
   transition: 400ms;
   width: 249px;
 }
-
 .plats p {
   font-size: smaller;
 }
