--- a/sass/ohmyfood.scss
+++ b/sass/ohmyfood.scss
@@ -4,17 +4,7 @@ $colorTertiary: #99E2D0;
 $shadow: 0px 4px 10px 0px rgba(0,0,0,0.3);
 $colorgrey: #7e7e7e;
 
-@keyframes slide {
-    0% {
-      opacity: 0;
-      transform: translateX(40px);
-    }
-    
-    100% {
-      opacity: 1;
-      transform: translateX(0px);
-    }
-  }
+
 .redBorder{
     border: 1px solid red;
 }
@@ -167,21 +157,37 @@ header{
     font-size: large;
     font-weight: 100;
     color: #1e1e1e;
-    .service_nom{
-        display: inline-block;
+    
+    
+    .service_nom {
+        
         position: relative;   
-        margin-bottom: 5px;
+        margin-bottom: 26px;
+        font-size: 17px;
+        font-weight: 300;
     }
     .service_nom::after{
-        content: "ici";
+        content:"";
         position: absolute;
         width: 40px;
         height: 3px;
-        background-color: red;
-        bottom: 30px;  
-        left: 3px;
-        }
+        background-color: #99E2D0;
+        bottom: -12px;
+        left:3px;
+        font-size:20px;
+        font-weight: 100;
+      }
+    
 }
+/*
+content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    width: 40px;
+    height: 4px;
+    background-color: #99E2D0;
+*/
 
 
 .checked{
