--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -19,6 +19,26 @@ body .btn {
   padding-right: 20px;
   color: white;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+body .btn::after {
+  content: "Commander";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  border-radius: 25px;
+  background-image: linear-gradient(#ffade8, #ad80e5);
+  padding-left: 50px;
+  padding-right: 50px;
+  color: white;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3);
+  z-index: 1;
+  position: absolute;
+  opacity: 0;
+}
+body .btn:hover::after {
+  opacity: 1;
 }
 body .btn--commander {
   padding-left: 50px;
@@ -62,10 +82,23 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+header a {
+  position: absolute;
+  left: 25px;
+}
+header a:visited, header a:link, header a:hover {
+  color: black;
+}
+header i {
+  font-weight: 800;
+  font-size: 1.3rem;
 }
 header img {
   padding: 19px 0px 12px 0px;
   width: 46%;
+  max-width: 172px;
 }
 
 #localisation {
@@ -179,6 +212,12 @@ content: "";
     height: 4px;
     background-color: #99E2D0;
 */
+.content {
+  display: flex;
+  justify-content: space-between;
+  width: 327px;
+}
+
 .checked {
   display: flex;
   justify-content: center;
@@ -190,6 +229,38 @@ content: "";
   color: white;
   transform: translateX(0px);
   transition: transform 400ms;
+}
+.checked i {
+  transform: rotate(1turn);
+  transition: all 0.4;
+}
+
+.plats {
+  margin: 11px;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  text-overflow: ellipsis;
+  width: 249px;
+  transition: width 400ms;
+}
+.plats h3 {
+  transition: width 400ms;
+}
+.plats p {
+  font-size: smaller;
+  transition: width 400ms;
+}
+
+.prix {
+  display: flex;
+  flex-direction: column-reverse;
+  margin: 11px;
+  transform: translateX(0px);
+  transition: transform 400ms;
+}
+.prix p {
+  font-weight: 500;
+  font-size: smaller;
 }
 
 .choix {
@@ -205,6 +276,9 @@ content: "";
 .choix:hover .checked {
   display: flex;
   transform: translateX(-65px);
+}
+.choix:hover .checked i {
+  rotate: 1turn;
 }
 .choix:hover .prix {
   transform: translateX(-65px);
@@ -231,36 +305,6 @@ content: "";
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-
-.content {
-  display: flex;
-  justify-content: space-between;
-  width: 327px;
-}
-
-.plats {
-  margin: 11px;
-  overflow: hidden;
-  overflow-wrap: break-word;
-  text-overflow: ellipsis;
-  transition: 400ms;
-  width: 249px;
-}
-.plats p {
-  font-size: smaller;
-}
-
-.prix {
-  display: flex;
-  flex-direction: column-reverse;
-  margin: 11px;
-  transform: translateX(0px);
-  transition: transform 400ms;
-}
-.prix p {
-  font-weight: 500;
-  font-size: smaller;
 }
 
 #reservation {
