--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -130,10 +130,10 @@ header img {
 }
 
 .banniere {
+  width: auto;
   height: 260px;
-  width: 100%;
-  max-width: 375px;
-  background-size: contain;
+  background-size: cover;
+  background-position: center;
 }
 .banniere--alafrancaise {
   background-image: url("./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
@@ -176,8 +176,24 @@ header img {
 }
 .titreRestaurant i {
   font-size: 25px;
-  font-weight: 100;
   margin-right: 20px;
+}
+.titreRestaurant .fal {
+  position: relative;
+}
+.titreRestaurant .fas {
+  color: transparent;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  background-clip: text;
+  position: absolute;
+  right: 12px;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.8s;
+}
+.titreRestaurant .fas:hover {
+  opacity: 1;
 }
 
 .service {
@@ -203,15 +219,6 @@ header img {
   font-weight: 100;
 }
 
-/*
-content: "";
-    position: absolute;
-    bottom: -10px;
-    left: 0;
-    width: 40px;
-    height: 4px;
-    background-color: #99E2D0;
-*/
 .content {
   display: flex;
   justify-content: space-between;
