--- a/sass/ohmyfood.scss
+++ b/sass/ohmyfood.scss
@@ -118,6 +118,7 @@ header{
         padding: 19px 0px 12px 0px;
         width: 46%;
         max-width: 172px;
+        
     }
 }
 #localisation{
@@ -148,10 +149,11 @@ header{
     }
 }
 .banniere{
+    
+    width: auto;
     height: 260px;
-    width: 100%;
-    max-width: 375px;
-    background-size: contain;
+    background-size: cover;
+    background-position: center;
     &--alafrancaise{
         background-image: url("./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
     }
@@ -193,11 +195,31 @@ header{
     }
     i{
         font-size: 25px;
-        font-weight: 100;
         margin-right: 20px;
+        
+        
+      
     }
-
+    .fal{
+        position: relative;
+    }
+    .fas{
+        color: transparent;
+        background-image: linear-gradient($colorSecondary, $colorPrimary);
+        -webkit-background-clip: text;
+        background-clip: text;
+        position: absolute;
+        right: 12px;
+        z-index: 1;
+        opacity: 0;
+        transition: opacity 0.8s;
+        &:hover{
+            opacity: 1;
+        }
+    }
 }
+
+
 .service{
     font-size: large;
     font-weight: 100;
@@ -224,15 +246,7 @@ header{
       }
     
 }
-/*
-content: "";
-    position: absolute;
-    bottom: -10px;
-    left: 0;
-    width: 40px;
-    height: 4px;
-    background-color: #99E2D0;
-*/
+
 
 
 
