--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -238,8 +238,7 @@ header img {
   transition: transform 400ms;
 }
 .checked i {
-  transform: rotate(1turn);
-  transition: all 0.4;
+  transition: all 0.4s;
 }
 
 .plats {
@@ -285,7 +284,7 @@ header img {
   transform: translateX(-65px);
 }
 .choix:hover .checked i {
-  rotate: 1turn;
+  transform: rotate(360deg);
 }
 .choix:hover .prix {
   transform: translateX(-65px);
