--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -21,7 +21,32 @@ body .btn {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3);
   position: relative;
 }
-body .btn::after {
+body .btn:hover::after {
+  opacity: 1;
+}
+body .btn--explorer::after {
+  content: "Explorer nos restaurants";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  border-radius: 25px;
+  background-image: linear-gradient(#ffade8, #ad80e5);
+  padding-left: 20px;
+  padding-right: 20px;
+  color: white;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3);
+  z-index: 1;
+  position: absolute;
+  opacity: 0;
+}
+body .btn--commander {
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-top: 10px;
+  margin-bottom: 83px;
+}
+body .btn--commander::after {
   content: "Commander";
   display: flex;
   justify-content: center;
@@ -36,15 +61,6 @@ body .btn::after {
   z-index: 1;
   position: absolute;
   opacity: 0;
-}
-body .btn:hover::after {
-  opacity: 1;
-}
-body .btn--commander {
-  padding-left: 50px;
-  padding-right: 50px;
-  margin-top: 10px;
-  margin-bottom: 83px;
 }
 body .titre {
   width: 100%;
@@ -62,6 +78,16 @@ body .step {
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
   font-weight: 500;
+}
+body .step i {
+  color: #7e7e7e;
+  font-size: large;
+}
+body .step:hover {
+  background-color: #f5edff;
+}
+body .step:hover i {
+  color: #9356DC;
 }
 body .ball {
   display: flex;
@@ -334,19 +360,19 @@ header img {
   font-size: 18px;
 }
 
-#fonctionnement {
+.fonctionnement {
   background: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px 20px 40px 20px;
+  /*i{
+      color: #7e7e7e;
+      font-size: large;
+  }*/
 }
-#fonctionnement h2 {
+.fonctionnement h2 {
   margin-bottom: 31px;
-}
-#fonctionnement i {
-  color: #7e7e7e;
-  font-size: large;
 }
 
 #restaurants {
