--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -225,16 +225,16 @@ header img {
   background-position: center;
 }
 .banniere--alafrancaise {
-  background-image: url("./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+  background-image: url("./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
 }
 .banniere--lanoteenchantee {
-  background-image: url("./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+  background-image: url("./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
 }
 .banniere--ledelicedessens {
-  background-image: url("./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+  background-image: url("./Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
 }
 .banniere--lapalettedugout {
-  background-image: url("./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+  background-image: url("./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
 }
 
 #menu {
@@ -325,6 +325,9 @@ header img {
   display: flex;
   justify-content: space-between;
   width: 327px;
+}
+.content h5 {
+  margin: 0px;
 }
 
 .checked {
