--- a/sass/ohmyfood.scss
+++ b/sass/ohmyfood.scss
@@ -248,16 +248,16 @@ header{
     background-size: cover;
     background-position: center;
     &--alafrancaise{
-        background-image: url("./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+        background-image: url("./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
     }
     &--lanoteenchantee{
-        background-image: url("./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+        background-image: url("./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
     }
     &--ledelicedessens{
-        background-image: url("./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+        background-image: url("./Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
     }
     &--lapalettedugout{
-        background-image: url("./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+        background-image: url("./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
     }
     
        
@@ -367,6 +367,9 @@ header{
     display: flex;
     justify-content: space-between;
     width: 327px;
+    h5{
+        margin: 0px;
+    }
       
 }
 
